--- a/badminton-demo/index.html
+++ b/badminton-demo/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
-<body>
 
-  <script src="./node_modules/matter-js/build/matter-dev.min.js"></script>
+<body>
+  <div id="scene"></div>
+  <button onclick="gamestart()">开始</button>
+  
+  <script src="../dist/engine.umd.js"></script>
   <script src="./index.js"></script>
+
+  <script>
+  </script>
 </body>
+
 </html>
